[gd_scene load_steps=8 format=2]

[ext_resource path="res://new_script.gd" type="Script" id=1]
[ext_resource path="res://src/Maze Generator.gd" type="Script" id=2]
[ext_resource path="res://assets/AdobeStock_400161823.svg" type="Texture" id=3]
[ext_resource path="res://motion.gd" type="Script" id=4]
[ext_resource path="res://WallBody.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 12.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="WallBody" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="Line2D" type="Line2D" parent="WallBody"]
width = 5.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBody"]
shape = SubResource( 4 )

[node name="OuterFrame" type="ReferenceRect" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 957.0
margin_bottom = 505.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0

[node name="KinematicBody2D" type="KinematicBody2D" parent="OuterFrame"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="OuterFrame/KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterFrame/KinematicBody2D"]
shape = SubResource( 3 )

[node name="MazeGenerator" type="Node" parent="."]
script = ExtResource( 2 )
